alignment issues about country

--- a/src/components/AboutCountry.css
+++ b/src/components/AboutCountry.css
@@ -113,7 +113,7 @@
   }
 
   .about__country-description {
-    margin-top: 0;
+    margin: auto 0;
   }
 }
 
@@ -143,7 +143,7 @@
   }
 
   .about__country-description {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     margin-left: 10px;
   }
 
@@ -180,7 +180,7 @@
   }
 
   .about__country-description {
-    margin-top: 35px;
+    /* margin-top: 35px; */
   }
 
   .about__description-row {
